org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/MultipleInheritance_2.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

// XPECT noErrors --> ""
package test{
	class A{
		class a {
			class aa{}
		}
	}
	class B specializes A{
		class b specializes a {}
	}
	class C specializes B{
		class c specializes a {}
	}
	class D specializes A::a{} 
	class EE {}
}
