org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/MemberNameTests_MultipleInheritance_nestedScopeLinkingTest.alf.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/
//X P E C T bug?????????
//The linking/scoping tests for "b" pass but not "a"
//"a" causes Rnti

//XPECT noErrors ---> ""
package test{
	class A{
		class a {}
		class AA {}
		class xx {}
		class aa{}
	}
	
	class B specializes A {
//pass 0		
		//XPECT linkedName at aa --> test.A.aa
	class b4 specializes aa{}	
//pass 2
		//XPECT linkedName at A::a --> test.A.a
		class b specializes A::a {}
//fail  2 - java.lang.RuntimeException: Error creating value for argument org.eclipse.xpect.xtext.lib.tests.LinkingTest.linkedName(..., ICrossEReferenceAndEObject arg1)
//Caused by: java.lang.RuntimeException: no EStructuralFeature found at '...\n	--- */\n		cl|ass b1 specia...'
		//XPECT linkedName at a --> test.A.a
		class b1 specializes a{}
//pass 3
		//XPECT linkedName at A::AA --> test.A.AA
//pass 4
		class b2 specializes A::AA{}
		//XPECT linkedName at AA --> test.A.AA
		class b3 specializes AA{}
	}
	class C specializes B{
//fail 5
		//XPECT linkedName at a --> test.A.a
		class c0 specializes a {}
//pass 6
		//XPECT linkedName at b --> test.B.b
		class c1 specializes b {}
//pass 7
		//XPECT linkedName at b1 --> test.B.b1
		class c2 specializes b1{}
//pass	8	
		//XPECT linkedName at AA --> test.A.AA
		class c3 specializes AA{}
	}
	class D specializes A::xx{} 
}
